--- a/TP3/EntregaFinal/css/style.css
+++ b/TP3/EntregaFinal/css/style.css
@@ -2018,7 +2018,7 @@ textarea {
     width: 75%;
     height: 86%;
     border-radius: 8px;
-    /*background-image: url(../img/game/batman.jpeg);*/
+    background-image: url(../img/game/batman.jpeg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
