--- a/TP3/EntregaFinal/css/style.css
+++ b/TP3/EntregaFinal/css/style.css
@@ -2022,7 +2022,6 @@ textarea {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    backdrop-filter: blur(1px);
   }
 .tablero{
     width: 100%;
@@ -2045,4 +2044,16 @@ textarea {
     opacity: 1;
     visibility: visible;
     transition: opacity 1s ease-in-out, visibility 1s ease-in-out;   
+}
+
+.contenedor_temp {
+    position: relative;
+    bottom: 719px;
+    left: -385px;
+    background-color: var(--primary-color);
+    width: auto;
+    border-radius: 12px;
+    border: #000000 solid 2px;
+    padding: 2px 10px 2px 10px;
+    font-size: large;
 }
