--- a/TP3/EntregaFinal/css/style.css
+++ b/TP3/EntregaFinal/css/style.css
@@ -2057,3 +2057,32 @@ textarea {
     padding: 2px 10px 2px 10px;
     font-size: large;
 }
+
+.cartel {
+    background-color: var(--shadow-primary);
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    width: 250px;
+    color: white;
+}
+
+.cartel h2 {
+    margin-bottom: 15px;
+}
+
+input[type="radio"] {
+    margin-right: 8px;
+}
+
+button {
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
