--- a/TP3/EntregaFinal/css/style.css
+++ b/TP3/EntregaFinal/css/style.css
@@ -2066,6 +2066,17 @@ textarea {
     text-align: center;
     width: 250px;
     color: white;
+    display: none;
+}
+
+.cartel2 {
+    background-color: var(--shadow-primary);
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    width: 250px;
+    color: white;
 }
 
 .cartel h2 {
@@ -2086,3 +2097,16 @@ button {
     transition: background-color 0.3s ease;
 }
 
+.contenedor-temporizador {
+    position: absolute;
+    top: 140px;
+    right: 20px;
+    background-color: var(--primary-color);
+    border: 2px solid #000000;
+    border-radius: 12px;
+    padding: 2px 10px;
+    font-size: large;
+    width: auto;
+    margin: 0;
+    box-sizing: border-box;
+  }
