--- a/TP3/EntregaFinal/css/style.css
+++ b/TP3/EntregaFinal/css/style.css
@@ -2149,6 +2149,73 @@ button {
     }
   }
 
-  /*FORMULARIO ELEGIR LINEAS*/
+  /*MODAL GANADOR*/
 
+  .modal {
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 20;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+    
+}
+
+.modal-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: var(--white);
+    background-color: var(--shadow-primary);
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%; 
+    height: 20%;
+    border-radius: 10px;
+    border-style: none;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#play-again-btn{
+        border-style: none;
+        display: inline-block;
+        margin: 12px;
+        padding: 5px 15px;
+        color: var(--white);
+        background: var(--primary-color);
+        cursor: pointer;
+        transition: ease-out 0.3s;
+        border-radius: 80px;
+        font-size: var(--h2);
+        box-shadow: inset 0 0 0 0 var(--ligth-primary-2);
+}
+
+#play-again-btn:hover {
+    color: var(--primary-color);
+    background-color: var(--black-background-);
+    border-color: var(--primary-color) 1px;
+    box-shadow: inset 0 -100px 0 0 transparent
+
+}
+
+#play-again-btn:active {
+    transform: scale(0.9);
+}
   
