--- a/TP4/EntregaFinal/style.css
+++ b/TP4/EntregaFinal/style.css
@@ -1,5 +1,6 @@
 :root{
     --colorBtnBuy:#83C252;
+    background-color: black;
 }
 
 html{
@@ -23,7 +24,6 @@ body {
 
 
 .backgroundScrolling {
-    background-image: url(assets/backgroundBody.png);
     background-repeat: repeat-y;
     width: 100%;
     min-height: 100vh;
@@ -33,20 +33,10 @@ body {
     height: 960px;
 }
 
-/* .layer_background1 {
-    background-image: url("assets/arbol2.png");
-    animation: scroll 20s backwards;
+.page1{
+    background-image: url(assets/backgroundBody.png);
 }
 
-.layer_background2 {
-    background-image: url("assets/22.png");
-    animation: scroll 15s infinite linear;
-}
-
-.layer_background3 {
-    background-image: url("assets/33.png");
-    animation: scroll 15s infinite linear;
-} */
 
 @keyframes scroll {
     from {
@@ -123,6 +113,7 @@ body {
     left: 52%;
     top: 40%;
 }
+
 
 .numberBlockPoster{
     background-image: url(assets/numberBlocksGrande.png);
@@ -229,4 +220,73 @@ body {
     bottom: 20%; 
     z-index: 0; 
 }
+/*Elementos segunda pagina*/
+.page2{
+    background: linear-gradient(180deg, #88DE7F 0%, #A8EBEC 50%);
+    /* clip-path: ellipse(75% 60% at 50% 20%); */
+    height: 894;
+}
 
+.elem5{
+    position: absolute;
+    background-image: url(assets/5.png);
+    width: 572px;
+    height: 1259px;
+    left: 61.5%;
+    top: -87px;
+}
+
+.texts {
+    padding: 20px;
+    margin-left: 92px;
+}
+
+.tittle {
+    font-weight: 600;
+    font-size: 47px;
+    font-family: "Lato", sans-serif;
+    line-height: 44.41px;
+    color: #1B428F; 
+}
+
+.description {
+    font-weight: 400;
+    font-size: 20px;
+    font-family: "Lato", sans-serif;
+    line-height: 24px;
+    color:#1B428F; 
+}
+
+.box1{
+    height: 132px;
+    width: 508px;
+}
+
+.box2{
+    height: 154px;
+    width: 701px;
+}
+
+.section2{
+    margin-top: 0.5%;
+}
+
+.tv{
+    background-image: url(assets/tv.png);
+    width: 576.38px;
+    height: 324.35px;
+    position: absolute;
+    right: 36%;
+    bottom: 31%;
+    z-index: 2;
+}
+
+.elem4{
+    background-image: url(assets/elem4.png);
+    width: 601.54px;
+    height: 603px;
+    position: absolute;
+    right: 49%;
+    bottom: -180px;
+    z-index: 2;
+}
