algunas animaciones de scroll

--- a/TP4/EntregaFinal/style.css
+++ b/TP4/EntregaFinal/style.css
@@ -119,11 +119,11 @@ body {
 
 .numberBlockPoster{
     background-image: url(assets/numberBlocksGrande.png);
-    width: 560px;
-    height: 320px;
+    width: 470px;
+    height: 270px;
     position: absolute;
-    left: 32%;
-    top:8%;
+    left: 28%;
+    top:12%;
 }
 
 .arbol2{
@@ -845,4 +845,10 @@ body {
     position: relative;
     top:90%;
     left: 7%;
+}
+
+.characters div {
+    opacity: 0; 
+    transform: translateX(-100%);
+    transition: transform 1s ease-out, opacity 1s ease-out;
 }
