--- a/TP4/EntregaFinal/style.css
+++ b/TP4/EntregaFinal/style.css
@@ -306,7 +306,7 @@ body {
     width: 701px;
 }
 
-
+/*
 .tv{
     background-image: url(assets/tv.png);
     width: 576.38px;
@@ -315,6 +315,29 @@ body {
     right: 36%;
     bottom: 31%;
     z-index: 2;
+}
+*/
+
+.frame {
+    width: 530px; 
+    height: 300px; 
+    background: #1879d6; 
+    border-radius: 85px; 
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 12px; 
+    margin-left: 250px;
+}
+
+.tv {
+    width: 92%;
+    height: 90%;
+    border-radius: 70px; 
+    background-size: contain; 
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .elem4{
