--- a/TP4/EntregaFinal/style.css
+++ b/TP4/EntregaFinal/style.css
@@ -884,10 +884,11 @@ body {
   background-image: url(assets/455_cleanup.png);
   display: grid;
   top: 90%;
+  margin-left: 95px;
   grid-template-areas:
     "item1 item2 item3 item4 item5"
     "item6 item7 item8 item9 item10";
-  background-size: 1280px 680px;
+  background-size: 1200px 680px;
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -903,49 +904,123 @@ body {
 
 .box1 {
   background-image: url(assets/box/boxElem1.png);
+  background-size: 100% 100%;
+  transition: background-size 0.3s ease, box-shadow 0.3s ease; 
+}
+
+.box1:hover {
+  background-size: 110% 110%; 
 }
 
 .box2 {
   background-image: url(assets/box/boxElem2.png);
-  margin-left: 20px;
+  margin-left: 32px;
+  background-size: 100% 100%;
+  transition: background-size 0.3s ease, box-shadow 0.3s ease; 
+
+}
+
+.box2:hover{
+  background-size: 110% 110%; 
+   
 }
 
 .box3 {
   background-image: url(assets/box/boxElem3.png);
-  margin-left: 55px;
+  background-size: 100% 100%;
+  transition: background-size 0.3s ease, box-shadow 0.3s ease; 
+
+}
+
+.box3:hover{
+  background-size: 110% 110%; 
+ 
 }
 
 .box4 {
   background-image: url(assets/box/boxElem4.png);
-  margin-left: 70px;
+  background-size: 100% 100%;
+  transition: background-size 0.3s ease, box-shadow 0.3s ease; 
+
+}
+
+.box4:hover{
+  background-size: 110% 110%; 
 }
 
 .box5 {
   background-image: url(assets/box/boxElem5.png);
+  background-size: 100% 100%;
+  transition: background-size 0.3s ease, box-shadow 0.3s ease; 
+
+}
+
+.box5:hover{
+  background-size: 110% 110%; 
+
 }
 
 .box6 {
   background-image: url(assets/box/boxElem6.png);
+  background-size: 100% 100%;
   height: 330px;
+  transition: background-size 0.3s ease, box-shadow 0.3s ease; 
+
+}
+
+.box6:hover{
+  background-size: 110% 110%; 
+
 }
 
 .box7 {
   background-image: url(assets/box/boxElem7.png);
+  background-size: 100% 100%;
   height: 330px;
+  transition: background-size 0.3s ease, box-shadow 0.3s ease; 
+
+}
+
+.box7:hover{
+  background-size: 110% 110%; 
+
 }
 
 .box8 {
   background-image: url(assets/box/boxElem8.png);
+  background-size: 100% 100%;
   height: 330px;
+  transition: background-size 0.3s ease, box-shadow 0.3s ease; 
+
+}
+
+.box8:hover{
+  background-size: 110% 110%; 
+ 
 }
 
 .box9 {
   background-image: url(assets/box/boxElem9.png);
+  background-size: 100% 100%;
+  margin-bottom: 2px;
+  transition: background-size 0.3s ease, box-shadow 0.3s ease; 
+
+}
+
+.box9:hover{
+  background-size: 105% 105%; 
 }
 
 .box10 {
   background-image: url(assets/box/boxElem10.png);
   height: 330px;
+  transition: background-size 0.3s ease, box-shadow 0.3s ease; 
+
+}
+
+.box10:hover{
+  background-size: 110% 110%; 
+  transition: background-size 0.3s ease, box-shadow 0.3s ease; 
 }
 
 .page9 {
